Update Repository in DESCRIPTION to ActiveSense

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,5 @@ Author: Zhou Fang [aut],
   Joss Langford [aut],
   Charles Sweetland [aut],
   Jia Ying Chua [aut, cre]
-Repository: CRAN
+Repository: ActiveSense
 Date/Publication: 2024-03-06 17:20:10 UTC
